correct alignment and spacing

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ label{
 } 
 
 input {
-    width: 100%;
+    width: 90%;
     padding: 10px;
     border: 1px black; 
     margin: 0 10px 10px 0;
